Eliminate Guava (#59)
Eliminate Guava
use Caffeine as replacement for LoaderCache